# prog-lang

./: .gitignore  README.md
bootstrap/: Cargo.toml
bootstrap/crates/bootstrap-macros/: Cargo.toml
bootstrap/crates/bootstrap-macros/src/: flags.rs  lib.rs
bootstrap/src/: cli.rs  error_warning.rs  literals.rs  main.rs
bootstrap/src/ast/: mod.rs  parser.rs  visitor.rs
bootstrap/src/ast/passes/: hir_lower.rs  item_scope_pass.rs  mod copy.rs  mod.rs  module_attrib_resolution.rs  module_symbol_generation.rs
bootstrap/src/ast_passes/: context_setup.rs  hir_lower.rs  item_scope_pass.rs  mod.rs  module_attrib_resolution.rs  module_scope_pass.rs  module_symbol_generation.rs  operator_passes.rs  precedence_passes.rs
bootstrap/src/common/: dag.rs  expr_utils.rs  logger.rs  mod.rs  names.rs  operators.rs  paths.rs  precedence.rs  scope.rs  span.rs  stats.rs  symbol_table.rs  symbols.rs  traits.rs  uses.rs
bootstrap/src/hir/: code_printer.rs  mod.rs  node_logger.rs  utils.rs  visitor.rs
bootstrap/src/hir/passes/: explicit_type_passes.rs  expr_passes.rs  misc_passes.rs  mod.rs  operator_passes.rs  path_passes.rs  precedence_passes.rs  symbol_generation.rs  trait_passes.rs  type_pass_utils.rs  type_passes.rs
bootstrap/src/lexer/: mod.rs  tables.rs  tokens.rs
bootstrap/src/type_system/: array.rs  dependency.rs  fn_ptr.rs  impl_trait.rs  mod.rs  never.rs  path.rs  pointer.rs  primtive.rs  reference.rs  registry.rs  slice.rs  string_slice.rs  trait_object.rs  tuple.rs  types.rs  unit.rs
design/: README.md  alllowed-symbols.md  grammar.md  interface-vs-trait.md  (+1 more)
(+90 files in other folders)
