[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_derive = "=4.5.13"
clap = { version = "4.5.16", features = ["derive"]}

bootstrap-macros = { path = "crates/bootstrap-macros"}


[workspace]
members = [ "crates/*" ]
